--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -53,7 +53,8 @@ title = "The Chilluminati Podcast"
     # { soundcloud = "https://soundcloud.com/username" },
     # { stack-overflow = "https://stackoverflow.com/users/userid/username" },
     # { steam = "https://steamcommunity.com/profiles/userid" },
-    # { telegram = "https://t.me/username" },
+    # { telegram = "https://t.me/username" },    
+    { spotify = "https://open.spotify.com/show/71Dnx4yKkQ0TfPWWu3swYP" },
     { tiktok = "https://www.tiktok.com/@chilluminatipod" },
     # { tumblr = "https://username.tumblr.com" },
     # { twitch = "https://twitch.tv/username" },
