adding jpb illustrations

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -15,7 +15,7 @@ title = "The Chilluminati Podcast"
 
 [author]
   name = "The Chilluminati Podcast"
-  image = "img/chill-logo-2.png"
+  image = "img/guys-logo.png"
   headline = "We want to believe!"
   bio = "A podcast on everything weird. UFO's, Hauntings, Mysterious Disappearances, True Crime. And inappropriate jokes to cope."
   links = [
