--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -10,7 +10,7 @@ title = "The Chilluminati Podcast"
   dateFormat = "2 January 2006"
   logo = "img/chill-logo.png"
   # secondaryLogo = "img/secondary-logo.png"
-  description = "A podcast for everything weird. UFO's, Hauntings, Mysterious Disappearances, True Crime and Inappropriate Jokes. If you're here for a history lesson you might be lost."
+  description = "A podcast for everything weird. UFO's, Hauntings, Mysterious Disappearances, True Crime and Inappropriate Jokes."
   copyright = "© Copyright 2024 Chilluminati LLC"
   title = "The Chilluminati Podcast"
   images = ["heading.jpg"]
