--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -28,8 +28,8 @@ disableImageZoom = true
 # smartTOCHideUnfocusedChildren = true
 
 
-  defaultOpenGraphImage = "/img/og-fb.png"
-  defaultTwitterImage = "/img/og-twitter.png"
+  defaultOpenGraphImage = "img/og-fb.png"
+  defaultTwitterImage = "img/og-twitter.png"
 
 [header]
   layout = "fixed-fill" # valid options: basic, fixed, fixed-fill, fixed-fill-blur
